--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
+asttokens==2.4.1
 contourpy==1.2.1
 cycler==0.12.1
+decorator==5.1.1
+executing==2.0.1
 fonttools==4.53.1
+imageio==2.35.0
+ipython==8.26.0
+jedi==0.19.1
 kiwisolver==1.4.5
 matplotlib==3.9.2
-numpy==2.0.1
+matplotlib-inline==0.1.7
+numpy==1.26.4
 packaging==24.1
+parso==0.8.4
+pexpect==4.9.0
 pillow==10.4.0
+prompt_toolkit==3.0.47
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.18.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 six==1.16.0
+stack-data==0.6.3
+traitlets==5.14.3
+typing_extensions==4.12.2
+wcwidth==0.2.13
